--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <input type="checkbox" class="btn-check" name="show-numbers" id="show-numbers" autocomplete="off">
                     <label class="btn btn-outline-dark m-2" for="show-numbers">Números</label>
                     <input type="checkbox" class="btn-check" name="show-letters" id="show-letters" autocomplete="off">
-                    <label class="btn btn-outline-dark m-2" for="show-letters">Colores</label>
+                    <label class="btn btn-outline-dark m-2" for="show-letters">Letras</label>
                 </div>
                 <div id="set-duration" class="mb-3">
                     <p><strong>Duración:</strong></p>
