--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="container py-3">
         <h1 class="animated backInDown text-center display-4">Nuovo Potrero</h1>
     </header>
-    <main class="container-fluid text-center">
+    <main class="container text-center">
         <section>
             <article class="mb-5" id="number-of-screen">
                 <p class="fs-5">Número de pantallas</p>
@@ -22,58 +22,67 @@
                 <input type="radio" class="btn-check" name="options-outlined" id="two-screen">
                 <label class="btn btn-outline-dark m-2" for="two-screen">2</label>
             </article>
-            <article class="mb-5"  id="options-configuration">
+            <article class="mb-3" id="options-configuration">
                 <p class="fs-5">Configuración</p>
-                <input type="radio" class="btn-check" name="options-config" id="config-manual" checked>
-                <label class="btn btn-outline-dark m-2" for="config-manual" onclick="showConfig()">Manual</label>
-                <input type="radio" class="btn-check" name="options-config" id="config-auto">
-                <label class="btn btn-outline-dark m-2" for="config-auto">Automática</label>
-            </article>
-            <article class="px-5 py-3 mb-5 border border-dark col-lg-6 m-auto rounded-3">
-                <div class="mb-3">
-                    <p><strong>Mostrar:</strong></p>
-                    <button data-bs-toggle="collapse" data-bs-target="#colorWrapper" role="button" id="show-colors" class="btn btn-outline-dark m-2" aria-expanded="false">Colores</button>
-                    <input type="checkbox" class="btn-check" id="show-numbers">
-                    <label class="btn btn-outline-dark m-2" for="show-numbers">Números</label>
-                    <input type="checkbox" class="btn-check" id="show-letters">
-                    <label class="btn btn-outline-dark m-2" for="show-letters">Letras</label>
-                </div>
-                <div class="collapse mb-3" id="colorWrapper">
-                    <p><strong>Seleccionar colores:</strong></p>
-                    <input class="btn-check color" value="red" id="red" type="checkbox" checked>
-                    <label class="btn btn-outline-danger m-2 p-4" for="red"></label>
-                    <input class="btn-check color" value="yellow" id="yellow" type="checkbox" checked>
-                    <label class="btn btn-outline-warning m-2 p-4" for="yellow"></label>
-                    <input class="btn-check color" value="green" id="green" type="checkbox" checked>
-                    <label class="btn btn-outline-success m-2 p-4" for="green"></label>
-                    <input class="btn-check color" value="blue" id="blue" type="checkbox" checked>
-                    <label class="btn btn-outline-primary m-2 p-4" for="blue"></label>
-                </div>
-                <div id="set-duration" class="mb-3">
-                    <p><strong>Duración:</strong></p>
-                    <div class="row">
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="amount">Cantidad de Estímulos</label>
-                                <input type="number" id="amount" value="0" min="0" class="duration-estimulo d-inline form-control">
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="stimulus">Estímulo en segundos: </label>
-                                <input type="number" min="0" id="stimulus" class="duration-estimulo d-inline form-control">
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="form-group">
-                                <label for="interval">Intervalo en segundos: </label>
-                                <input type="number" min="0" id="interval" class="duration-estimulo d-inline form-control">
-                            </div>
-                        </div>
-                    </div>
+                <div class="nav nav-tabs border-0 justify-content-center p-0" role="tablist" id="tabs">
+                    <button value="manual" data-bs-target="#manual" data-bs-toggle="tab" class="btn btn-outline-dark m-2 active">Manual</button>
+                    <button value="auto" data-bs-target="#auto" data-bs-toggle="tab" class="btn btn-outline-dark m-2">Automática</button>
                 </div>
             </article>
-            <!-- Trigger/Open The Modal -->
+            <div class="tab-content">
+                <div class="tab-pane active" id="manual" role="tabpanel">
+                    <article class="px-5 py-3 mb-5 border border-dark m-auto rounded-3">
+                        <div class="mb-3">
+                            <p><strong>Mostrar:</strong></p>
+                            <button data-bs-toggle="collapse" data-bs-target="#colorWrapper" role="button" id="show-colors" class="btn btn-outline-dark m-2" aria-expanded="false">Colores</button>
+                            <input type="checkbox" class="btn-check" id="show-numbers">
+                            <label class="btn btn-outline-dark m-2" for="show-numbers">Números</label>
+                            <input type="checkbox" class="btn-check" id="show-letters">
+                            <label class="btn btn-outline-dark m-2" for="show-letters">Letras</label>
+                        </div>
+                        <div class="collapse mb-3" id="colorWrapper">
+                            <p><strong>Seleccionar colores:</strong></p>
+                            <input class="btn-check color" value="red" id="red" type="checkbox" checked>
+                            <label class="btn btn-outline-danger m-2 p-4" for="red"></label>
+                            <input class="btn-check color" value="yellow" id="yellow" type="checkbox" checked>
+                            <label class="btn btn-outline-warning m-2 p-4" for="yellow"></label>
+                            <input class="btn-check color" value="green" id="green" type="checkbox" checked>
+                            <label class="btn btn-outline-success m-2 p-4" for="green"></label>
+                            <input class="btn-check color" value="blue" id="blue" type="checkbox" checked>
+                            <label class="btn btn-outline-primary m-2 p-4" for="blue"></label>
+                        </div>
+                        <div id="set-duration" class="mb-3">
+                            <p><strong>Duración:</strong></p>
+                            <div class="row justify-content-center">
+                                <div class="col-4">
+                                    <div class="form-group">
+                                        <label for="amount">Cantidad de Estímulos</label>
+                                        <input type="number" id="amount" value="0" min="0" class="duration-estimulo d-inline form-control">
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <div class="form-group">
+                                        <label for="stimulus">Estímulo en segundos: </label>
+                                        <input type="number" min="0" id="stimulus" value="3" class="duration-estimulo d-inline form-control">
+                                    </div>
+                                </div>
+                                <!-- <div class="col">
+                                    <div class="form-group">
+                                        <label for="interval">Intervalo en segundos: </label>
+                                        <input type="number" min="0" id="interval" class="duration-estimulo d-inline form-control">
+                                    </div>
+                                </div> -->
+                            </div>
+                        </div>
+                    </article>
+                </div>
+                <div class="tab-pane" id="auto" role="tabpanel">
+                    <article class="px-3 py-5 mb-5 border border-dark m-auto rounded-3">
+                        <p class="mb-0">Se generarán 15 estímulos de 4 segundos cada uno de forma aleatoria</p>
+                    </article>
+                </div>
+            </div>
+
             <button class="animated wobble btn btn-success mt-3 fs-5" onclick="start();">Empezar</button>
         </section>
         <div id="modal" class="modal show" data-bs-ride="modal">
@@ -89,7 +98,6 @@
         </div>
     </main>
 
-    <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/js/code.js"></script>
 </body>
