--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
     </main>
 
-    <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/code.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/code.js"></script>
 </body>
 </html>
