Hidding screen configs

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     </header>
     <main class="container text-center">
         <section>
-            <article class="mb-5" id="number-of-screen">
+            <!-- <article class="mb-5" id="number-of-screen">
                 <p class="fs-5">Número de pantallas</p>
                 <input type="radio" class="btn-check" name="options-outlined" id="one-screen" checked>
                 <label class="btn btn-outline-dark m-2" for="one-screen">1</label>
                 <input type="radio" class="btn-check" name="options-outlined" id="two-screen">
                 <label class="btn btn-outline-dark m-2" for="two-screen">2</label>
-            </article>
+            </article> -->
             <article class="mb-3" id="options-configuration">
                 <p class="fs-5">Configuración</p>
                 <div class="nav nav-tabs border-0 justify-content-center p-0" role="tablist" id="tabs">
