Added Orange & Purple, and avoiding dups

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                             <label class="btn btn-outline-success m-2 p-4" for="green"></label>
                             <input class="btn-check color" value="blue" id="blue" type="checkbox" checked>
                             <label class="btn btn-outline-primary m-2 p-4" for="blue"></label>
+                            <input class="btn-check color" value="orange" id="orange" type="checkbox" checked>
+                            <label class="btn btn-outline-orange m-2 p-4" for="orange"></label>
+                            <input class="btn-check color" value="purple" id="purple" type="checkbox" checked>
+                            <label class="btn btn-outline-purple m-2 p-4" for="purple"></label>
                         </div>
                         <div id="set-duration" class="mb-3">
                             <p><strong>Duración:</strong></p>
