--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                                 <div class="col-4">
                                     <div class="form-group">
                                         <label for="amount">Cantidad de Estímulos</label>
-                                        <input type="number" id="amount" value="0" min="10" class="duration-estimulo d-inline form-control">
+                                        <input type="number" id="amount" value="10" min="0" class="form-control">
                                     </div>
                                 </div>
                                 <div class="col-4">
                                     <div class="form-group">
                                         <label for="stimulus">Duración de cada estímulo en segundos</label>
-                                        <input type="number" min="0" id="stimulus" value="3" class="duration-estimulo d-inline form-control">
+                                        <input type="number" id="stimulus" value="3" min="0" class="form-control">
                                     </div>
                                 </div>
                                 <!-- <div class="col">
