Reworked the automatic

--- a/index.html
+++ b/index.html
@@ -84,12 +84,9 @@
                     </article>
                 </div>
                 <div class="tab-pane" id="auto" role="tabpanel">
-                    <article class="px-3 py-5 mb-5 border border-dark m-auto rounded-3">
-                        <p class="mb-0">Se generarán 15 estímulos de 4 segundos cada uno de forma aleatoria</p>
-                    </article>
+                    <!-- <article class="px-3 py-5 mb-5 border border-dark m-auto rounded-3"></article> -->
                 </div>
             </div>
-
             <button class="animated wobble btn btn-success mt-3 fs-5" onclick="start();">Empezar</button>
         </section>
         <div id="modal" class="modal show" data-bs-ride="modal">
