Removed all forEachs, using old style for loops

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/bootstrap.extra.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <script async src="js/jquery.min.js"></script>
-    <script async src="js/bootstrap.bundle.min.js"></script>
-    <script async src="js/code.js"></script>
+    <script defer src="js/jquery.min.js"></script>
+    <script defer src="js/bootstrap.bundle.min.js"></script>
+    <script defer src="js/code.js"></script>
     <title>Nuovo Potrero</title>
 </head>
 <body>
