--- a/index.html
+++ b/index.html
@@ -19,48 +19,41 @@
     </header>
     <main class="container text-center">
         <section>
-            <!-- <article class="mb-5" id="number-of-screen">
-                <p class="fs-5">Número de pantallas</p>
-                <input type="radio" class="btn-check" name="options-outlined" id="one-screen" checked>
-                <label class="btn btn-outline-dark m-2" for="one-screen">1</label>
-                <input type="radio" class="btn-check" name="options-outlined" id="two-screen">
-                <label class="btn btn-outline-dark m-2" for="two-screen">2</label>
-            </article> -->
-            <article class="mb-3" id="options-configuration">
-                <p class="fs-5">Configuración</p>
-                <div class="nav nav-tabs border-0 justify-content-center p-0" role="tablist" id="tabs">
-                    <button value="manual" data-target="#manual" data-toggle="tab" class="btn btn-outline-dark m-2 active">Manual</button>
-                    <button value="auto" data-target="#auto" data-toggle="tab" class="btn btn-outline-dark m-2">Automática</button>
+            <article class="px-5 py-3 mb-5 border border-dark m-auto rounded-3">
+                <div class="mb-3" id="options-configuration">
+                    <p class="fs-5"><strong>Configuración</strong></p>
+                    <div class="nav nav-tabs border-0 justify-content-center p-0" role="tablist" id="tabs">
+                        <button value="manual" data-target="#manual" data-toggle="tab" class="btn btn-outline-dark m-2 active">Manual</button>
+                        <button value="auto" data-target="#auto" data-toggle="tab" class="btn btn-outline-dark m-2">Automática</button>
+                    </div>
                 </div>
-            </article>
-            <div class="tab-content">
-                <div class="tab-pane active" id="manual" role="tabpanel">
-                    <article class="px-5 py-3 mb-5 border border-dark m-auto rounded-3">
-                        <div class="mb-5">
-                            <p><strong>Mostrar</strong></p>
-                            <button data-toggle="collapse" data-target="#colorWrapper" role="button" id="show-colors" class="btn btn-outline-dark m-2" aria-expanded="false">Colores</button>
-                            <input type="checkbox" class="btn-check" id="show-numbers">
-                            <label class="btn btn-outline-dark m-2" for="show-numbers">Números</label>
-                            <input type="checkbox" class="btn-check" id="show-letters">
-                            <label class="btn btn-outline-dark m-2" for="show-letters">Letras</label>
-                            <p class="text-muted">Para comenzar en el modo manual <strong>debe haber al menos un tipo de estímulo seleccionado</strong></p>
+                <div class="mb-5">
+                    <p><strong>Mostrar</strong></p>
+                    <button data-toggle="collapse" data-target="#colorWrapper" role="button" id="show-colors" class="btn btn-outline-dark m-2" aria-expanded="false">Colores</button>
+                    <input type="checkbox" class="btn-check" id="show-numbers">
+                    <label class="btn btn-outline-dark m-2" for="show-numbers">Números</label>
+                    <input type="checkbox" class="btn-check" id="show-letters">
+                    <label class="btn btn-outline-dark m-2" for="show-letters">Letras</label>
+                    <p class="text-muted">Para comenzar en el modo manual <strong>debe haber al menos un tipo de estímulo seleccionado</strong></p>
 
-                        </div>
-                        <div class="collapse mb-3" id="colorWrapper">
-                            <p><strong>Seleccionar colores</strong></p>
-                            <input class="btn-check color" value="red" id="red" type="checkbox" checked>
-                            <label class="btn btn-outline-danger m-2 p-4" for="red"></label>
-                            <input class="btn-check color" value="yellow" id="yellow" type="checkbox" checked>
-                            <label class="btn btn-outline-warning m-2 p-4" for="yellow"></label>
-                            <input class="btn-check color" value="green" id="green" type="checkbox" checked>
-                            <label class="btn btn-outline-success m-2 p-4" for="green"></label>
-                            <input class="btn-check color" value="blue" id="blue" type="checkbox" checked>
-                            <label class="btn btn-outline-primary m-2 p-4" for="blue"></label>
-                            <input class="btn-check color" value="orange" id="orange" type="checkbox" checked>
-                            <label class="btn btn-outline-orange m-2 p-4" for="orange"></label>
-                            <input class="btn-check color" value="purple" id="purple" type="checkbox" checked>
-                            <label class="btn btn-outline-purple m-2 p-4" for="purple"></label>
-                        </div>
+                </div>
+                <div class="collapse mb-3" id="colorWrapper">
+                    <p><strong>Seleccionar colores</strong></p>
+                    <input class="btn-check color" value="red" id="red" type="checkbox" checked>
+                    <label class="btn btn-outline-danger m-2 p-4" for="red"></label>
+                    <input class="btn-check color" value="yellow" id="yellow" type="checkbox" checked>
+                    <label class="btn btn-outline-warning m-2 p-4" for="yellow"></label>
+                    <input class="btn-check color" value="green" id="green" type="checkbox" checked>
+                    <label class="btn btn-outline-success m-2 p-4" for="green"></label>
+                    <input class="btn-check color" value="blue" id="blue" type="checkbox" checked>
+                    <label class="btn btn-outline-primary m-2 p-4" for="blue"></label>
+                    <input class="btn-check color" value="orange" id="orange" type="checkbox" checked>
+                    <label class="btn btn-outline-orange m-2 p-4" for="orange"></label>
+                    <input class="btn-check color" value="purple" id="purple" type="checkbox" checked>
+                    <label class="btn btn-outline-purple m-2 p-4" for="purple"></label>
+                </div>
+                <div class="tab-content">
+                    <div class="tab-pane active" id="manual" role="tabpanel">
                         <div id="set-duration" class="mb-3">
                             <p><strong>Duración:</strong></p>
                             <div class="row justify-content-center mb-2">
@@ -78,7 +71,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <label for="deatTime">Tiempo muerto: </label>
+                                        <label for="deatTime">Tiempo muerto:</label>
                                         <input type="number" min="0" id="deadTime" value="0" class="duration-estimulo d-inline form-control">
                                     </div>
                                 </div>
@@ -88,10 +81,10 @@
                             </label>
                             <p class="text-muted">La <strong>cantidad de estímulos y su duración deben ser mayor a cero</strong> para comenzar</p>
                         </div>
-                    </article>
+                    </div>
+                    <div class="tab-pane" id="auto" role="tabpanel"></div>
                 </div>
-                <div class="tab-pane" id="auto" role="tabpanel"></div>
-            </div>
+            </article>
             <button class="animated wobble btn btn-success mt-3 fs-5" onclick="start ? start() : false;">Empezar</button>
         </section>
         <div id="modal" class="modal show" data-ride="modal">
