Fixed user select error & color shown

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <script defer src="js/jquery.min.js"></script>
     <script defer src="js/bootstrap.bundle.min.js"></script>
     <script defer src="js/code.js"></script>
+    <script>
+        window.addEventListener('selectstart', function(e) { e.preventDefault(); });
+    </script>
     <title>Nuovo Potrero</title>
 </head>
 <body>
